<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jan.restauto.floorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="30dp"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="180dp">
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/floor"
                android:textSize="44sp" />

            <Spinner
                android:id="@+id/floorSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:entries="@array/floorChoice"
                android:prompt="@string/floorPrompt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/table"
                android:textSize="44sp" />
            <Spinner
                android:id="@+id/tableSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:prompt="@string/tablePrompt"
                android:entries="@array/tableChoice" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="@string/status"
                android:textSize="44sp" />

            <Spinner
                android:id="@+id/statusSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:entries="@array/tableState"
                android:prompt="@string/statusPrompt"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nextBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/nextC"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/update"
                android:textColor="@android:color/background_light"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>
